--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="src/main.css">
+<!--     <link rel="stylesheet" href="https://laxxoby.github.io/LaxxoFramework/dist/css/laxxoframework.min.css">
+ -->
     <link rel="stylesheet" href="style.css">
+
     <script src="scripts/manejoModos.js"></script>
 </head>
 
