--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html theme-mode="light", neon="on">
+<html theme-mode="light" , neon="on">
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="src/main.css">
-<!--     <link rel="stylesheet" href="https://laxxoby.github.io/LaxxoFramework/dist/css/laxxoframework.min.css">
+    <!--     <link rel="stylesheet" href="https://laxxoby.github.io/LaxxoFramework/dist/css/laxxoframework.min.css">
  -->
     <link rel="stylesheet" href="style.css">
 
@@ -50,8 +50,12 @@
 
     <hr>
     <div class="card" style="width: 18rem;">
-        <img src="https://assets-global.website-files.com/5dcc7f8c449e597ed83356b8/5dcc8a5e5473766654e080bb_5d93d0a059ce656959dab196_logo-full-black-2000-p-500.png"
-            class="card-img-top" alt="...">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+                cap</text>
+        </svg>
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -125,7 +129,8 @@
 
     <hr>
     <p class="text-center">
-        <a href="https://github.com/Laxxoby/LaxxoFramework" target="_blank" rel="noopener noreferrer">Designed &amp; Built by
+        <a href="https://github.com/Laxxoby/LaxxoFramework" target="_blank" rel="noopener noreferrer">Designed &amp;
+            Built by
             Johan Lasso</a>
     </p>
 </body>
