--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <button id="theme-toggle" class="theme-toggle">
         <i class="fas fa-moon"></i>
     </button>
+
+    <button id="neon-toggle" class="neon-toggle">
+        <i class="fa-solid fa-bolt"></i>
+    </button>
+
     <nav class="nav">
         <a class="nav-link active" aria-current="page" href="#">Active</a>
         <a class="nav-link" href="#">Link</a>
